Added support for faugjs template validation and diagnostic errors Added support for compression of faugjs artifacts (in a separate worker thread) First official version of the faugjs plugin for vscode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
 			"request": "launch",
 			"runtimeExecutable": "${execPath}",
 			"args": ["--extensionDevelopmentPath=${workspaceRoot}"],
-			"outFiles": ["${workspaceFolder}/out/**/*.js"],
+			"outFiles": ["${workspaceFolder}/main.js"],
 			"preLaunchTask": "npm: watch"
 		}
 	]
