--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 # Logs
 logs
 *.log
+*.vsix
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+/compress_worker.js
+/faug-templatize.js
+/main.js
+/main.js.map
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
