--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,11 @@
 		"module": "commonjs",
 		"target": "es2019",
 		"lib": ["ES2019"],
-		"outDir": "out",
+		"outDir": "./",
 		"sourceMap": true,
 		"strict": true,
-		"rootDir": "src"
+		"rootDir": "src",
+		"moduleResolution": "node"
 	},
-	"exclude": ["node_modules", ".vscode-test", "out", "media"]
+	"exclude": ["node_modules", ".vscode-test"]
 }
