Added support for http serve and fixed issues with compression Also fixed windows related extension issues Added support for output channel logging

--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
 				"command": "faugjs.compress",
 				"title": "Compress/Minify all artifacts",
 				"category": "faugjs"
+			},
+			{
+				"command": "faugjs.serve",
+				"title": "Serve faugjs application",
+				"category": "faugjs"
 			}
 		]
 	},
@@ -37,38 +42,46 @@
 		"compile": "tsc -p ./",
 		"lint": "eslint . --ext .ts,.tsx",
 		"watch": "tsc -w -p ./",
-		"vscode:package": "vsce package",
-		"vscode:prepublish": "npm run esbuild-base -- --minify",
+		"vscode:prepublish": "npm run -S esbuild-base -- --minify",
 		"vscode:prepublish1": "npm run compile",
-		"esbuild-base": "esbuild ./src/main.ts --bundle --outfile=./main.js --external:vscode --format=cjs --platform=node",
-		"esbuild": "npm run esbuild-base -- --sourcemap",
-		"esbuild-watch": "npm run esbuild-base -- --sourcemap --watch"
+		"esbuild-base": "esbuild ./src/main.ts ./src/compress_worker.js ./src/http_worker.js --bundle --outdir=. --external:vscode --format=cjs --platform=node",
+		"esbuild": "npm run -S esbuild-base -- --sourcemap",
+		"esbuild-watch": "npm run -S esbuild-base -- --sourcemap --watch"
 	},
 	"dependencies": {
 		"@node-minify/core": "^6.2.0",
 		"@node-minify/google-closure-compiler": "^6.2.0",
 		"@node-minify/no-compress": "^6.2.0",
 		"@node-minify/sqwish": "^6.2.0",
-		"@node-minify/uglify-es": "^6.2.0",
-		"@node-minify/uglify-js": "^6.2.0",
-		"@types/js-beautify": "^1.13.2",
-		"@types/tmp": "^0.2.1",
+		"@node-minify/terser": "^6.2.0",
 		"crypto": "^1.0.1",
 		"csso": "^4.2.0",
 		"esprima": "^4.0.1",
 		"fast-glob": "^3.2.7",
+		"http": "0.0.1-security",
 		"js-beautify": "^1.14.0",
-		"jsonlint": "^1.6.3",
-		"node-minify": "^3.6.0",
-		"uglify-js": "^3.14.2",
+		"node-static": "^0.7.11",
+		"parse-json": "^5.2.0",
+		"stoppable": "^1.1.0",
 		"vm": "^0.1.0",
 		"xmldom": "^0.6.0",
-		"xpath": "0.0.32"
+		"xpath": "0.0.32",
+		"xpath-ts": "^1.3.13"
 	},
 	"devDependencies": {
-		"@types/node": "^12.12.0",
+		"@node-minify/core": "^6.2.0",
+		"@node-minify/google-closure-compiler": "^6.2.0",
+		"@node-minify/no-compress": "^6.2.0",
+		"@node-minify/sqwish": "^6.2.0",
+		"@node-minify/terser": "^6.2.0",
+		"@node-minify/uglify-es": "^6.2.0",
+		"@types/csso": "^4.2.0",
+		"@types/esprima": "^4.0.3",
+		"@types/js-beautify": "^1.13.2",
+		"@types/node": "^12.20.25",
 		"@types/vscode": "^1.47.0",
 		"@types/vscode-webview": "^1.57.0",
+		"@types/xmldom": "^0.1.31",
 		"@typescript-eslint/eslint-plugin": "^4.16.0",
 		"@typescript-eslint/parser": "^4.16.0",
 		"esbuild": "^0.12.28",
