--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
 			"runtimeExecutable": "${execPath}",
 			"args": ["--extensionDevelopmentPath=${workspaceRoot}"],
 			"outFiles": ["${workspaceFolder}/main.js"],
-			"preLaunchTask": "npm: watch"
+			//"preLaunchTask": "npm: watch"
 		}
 	]
 }
